--- a/src/cssfiles/authentication/login.css
+++ b/src/cssfiles/authentication/login.css
@@ -17,13 +17,13 @@
     margin-bottom: 20px;
     text-align: center;
     font-size: 16px;
-    color: #333; /* Dark text for readability */
+    color: #c51d1d; /* Dark text for readability */
     border: 1px solid #fbc02d; /* Darker yellow border for contrast */
     font-weight: bold;
   }
   
   .info-box strong {
-    color: #d32f2f; /* Red color for the passwords to make them stand out */
+    color: #190606; /* Red color for the passwords to make them stand out */
   }
   
 /* Login Form Styles */
@@ -93,7 +93,7 @@ input {
     border: 1px solid #444;  /* Darker border */
     border-radius: 12px;
     background-color: #444444;  /* Darker input background */
-    color: #ffffff;  /* White text */
+    color: #140c0c;  /* White text */
     box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.3);
     transition: all 0.3s ease;
 }
